platform/redisinsight/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redisinsight
  namespace: redisinsight
  labels: { app: redisinsight }
spec:
  selector: { app: redisinsight }
  ports:
    - { port: 5540, targetPort: 5540, name: http }
